# Project-7-Minishell

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  letters.py
.github/workflows/: cmake.yml
include/: builtins.h  environment.h  executor.h  expand.h  ft_string.h  grammar.h  lexer.h  parser.h  util.h
lib/: CMakeLists.txt  utils.c  utils2.c
lib/builtins/: ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c
lib/environment/: environment.c  environment_utils.c  environment_utils.h  environment_utils2.c
lib/executor/: execute_builtins.c  execute_command.c  execute_pipe.c  execute_redirections.c  execute_std.c  executor.c  executor_utils.h  heredoc.c  heredoc_expand.c
lib/expander/: expand.c  expand_command.c  expand_utils.h  expand_word_token.c  expander_expand_functions.c
lib/lexer/: lexer.c  lexer_parse_functions.c  lexer_utils.c  lexer_utils.h
lib/parser/: parse_files.c  parse_word_pipe.c  parser.c  parser_utils.c  parser_utils.h
lib/string/: ft_string.c  ft_string_2.c
libft/: .gitignore  CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  (+9 more)
src/: CMakeLists.txt  main.c
src/lexer/: lexer.c  lexer_parse_functions.c  lexer_utils.c  lexer_utils.h
src/parser/: parser.c
system_tests/: Makefile  dotest.sh
test/: CMakeLists.txt  test_expand.c  test_lexer.c  test_parser.c
